5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1573_1330.log
== SUBMITION (2019-03-11 15:18:48) 
-- CODE:
print(41,6)
	  
-- EXECUTION TIME:
0.141098
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:50) 
-- CODE:
print(41,6)
	  
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:54) 
-- CODE:
print(41)
	  
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:55) 
-- CODE:
print(41)
	  
-- EXECUTION TIME:
0.168074
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:58) 
-- CODE:
print(41)
	  
-- EXECUTION TIME:
0.185328
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:22) 
-- CODE:
print(45)
	  
-- EXECUTION TIME:
0.26323
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:19:24) 
-- CODE:
print(45)
	  
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:19:26) 
-- CODE:
print(45)
	  
-- EXECUTION TIME:
0.137503
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:13) 
-- CODE:
print("round(41.6,2)")
	  
-- OUTPUT:
round(41.6,2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:15) 
-- CODE:
print("round(41.6,2)")
	  
-- EXECUTION TIME:
0.161059
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.6,2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:20) 
-- CODE:
print ("round(41.6,2)")
	  
-- OUTPUT:
round(41.6,2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:23) 
-- CODE:
print ("round(41.6,2)")
	  
-- EXECUTION TIME:
0.191903
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(41.6,2)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:21:41) 
-- CODE:
print(round(41.6, 2))
	  
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:21:43) 
-- CODE:
print(round(41.6, 2))
	  
-- EXECUTION TIME:
0.157693
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:46) 
-- CODE:
print(round((41.6, 2))
	  
-- ERROR:
File "XXXX", line 3
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:22:49) 
-- CODE:
print(round((41.6, 2))
	  
-- EXECUTION TIME:
0.174396
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 3
    
       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:22:51) 
-- CODE:
print(round((41.6, 2))
	  
-- ERROR:
File "XXXX", line 3
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:05) 
-- CODE:
print(round(41.6, 2)) 
-- EXECUTION TIME:
0.20656
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:08) 
-- CODE:
print(round(41.6, 2)) 
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:10) 
-- CODE:
print(round(41.6, 2)) 
-- EXECUTION TIME:
0.115491
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:17) 
-- CODE:
print(round(41.6,2)) 
-- EXECUTION TIME:
0.203724
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:23:29) 
-- CODE:
print(round(41.67, 2)) 
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:23:32) 
-- CODE:
print(round(41.67, 2)) 
-- EXECUTION TIME:
0.190097
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
